<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_product">

    <fragment
        android:id="@+id/nav_about"
        android:name="br.edu.ifrs.poa.organicpercent.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_product"
        android:name="br.edu.ifrs.poa.organicpercent.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_supplier"
        android:name="br.edu.ifrs.poa.organicpercent.ui.supplier.SupplierFragment"
        android:label="@string/menu_supplier"
        tools:layout="@layout/fragment_supplier" />
</navigation>